# logo-lig

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml
.github/workflows/: check.yml
examples/: Makefile  example.c  test_liga.html
